# nlp-course

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
information-retrieval/: dockerfile  main.py  requirements.txt
pdf-to-sentences/: README.md  dockerfile  main.py  requirements.txt
sentiment-analysis/: README.md  dockerfile  main.py  up-and-running.md
text-to-persons/: README.md  dockerfile  main.py
