[project]
name = "nlp-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "afinn>=0.1",
    "docling>=2.73.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.2",
    "httpx>=0.28.1",
    "marker-pdf>=1.10.2",
    "markitdown[pdf]>=0.1.4",
    "pip>=26.0.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "spacy>=3.8.11",
    "uvicorn>=0.40.0",
]
